load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-browser/cmd/bb_dump_build_events",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/buildevents:go_default_library",
        "@com_github_bazelbuild_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_matttproud_golang_protobuf_extensions//pbutil:go_default_library",
    ],
)

go_binary(
    name = "bb_dump_build_events",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)
