load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "lists.go",
        "nodes.go",
        "stream_parser.go",
    ],
    importpath = "github.com/buildbarn/bb-browser/pkg/buildevents",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_bazel//src/main/java/com/google/devtools/build/lib/buildeventstream/proto:go_default_library",
        "@com_github_bazelbuild_bazel//src/main/protobuf:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
