load("@io_bazel_rules_go//go:def.bzl", "go_embed_data")

go_embed_data(
    name = "assets",
    srcs = [
        "favicon.png",
        "@com_github_buildkite_terminal//assets:terminal.css",
        "@com_github_twbs_bootstrap//:css/bootstrap.min.css",
        "@com_github_twbs_bootstrap//:js/bootstrap.min.js",
        "@com_jquery_jquery//file",
    ],
    flatten = True,
    package = "main",
    var = "AssetsData",
    visibility = ["//cmd/bb_browser:__pkg__"],
)
