load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bb_browser_proto",
    srcs = ["bb_browser.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto"],
)

go_proto_library(
    name = "bb_browser_go_proto",
    importpath = "github.com/buildbarn/bb-browser/pkg/proto/configuration/bb_browser",
    proto = ":bb_browser_proto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":bb_browser_go_proto"],
    importpath = "github.com/buildbarn/bb-browser/pkg/proto/configuration/bb_browser",
    visibility = ["//visibility:public"],
)
