load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "bb_browser_proto",
    srcs = ["bb_browser.proto"],
    import_prefix = "github.com/buildbarn/bb-browser",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/auth:auth_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore:blobstore_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global:global_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http/server:server_proto",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/jmespath:jmespath_proto",
    ],
)

go_proto_library(
    name = "bb_browser_go_proto",
    importpath = "github.com/buildbarn/bb-browser/pkg/proto/configuration/bb_browser",
    proto = ":bb_browser_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/auth",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/global",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/http/server",
        "@com_github_buildbarn_bb_storage//pkg/proto/configuration/jmespath",
    ],
)

go_library(
    name = "bb_browser",
    embed = [":bb_browser_go_proto"],
    importpath = "github.com/buildbarn/bb-browser/pkg/proto/configuration/bb_browser",
    visibility = ["//visibility:public"],
)
